# multi-model-server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_UPLOAD.md  README.md  chat_loading.html  install.bat  pyproject.toml  requirements.txt  server_v2.py  server_v3.py  start_servers.bat  start_windows.bat  test_flash_attention.py  windows_server.py  windows_server_flash.py
.github/: PULL_REQUEST_TEMPLATE.md  mlc_config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
frontend/: chat_loading.html  chat_server_down.html
scripts/: setup_flash_attention.ps1  stop.bat
servers/: _template.py  manager.py  mistral.py  qwen.py  router.py
tests/: simple_test.py  test_client.py  test_connection.html  test_qwen_vision.html
